# cel-sched-events

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/repository/: __init__.py  event_repo.py
app/repository/models/: event.py
app/services/: event_service.py
migrations/: migrations.sql
