[tool.poetry]
name = "CEL Scheduled Events"
version = "0.1.0"
description = "A brief description of your project."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.7"
Flask = "2.0.1"
requests = "2.25.1"
SQLAlchemy = "1.4.50"
FastAPI = "0.95.2"
uvicorn = "0.22.0"
psycopg2-binary = "2.9.8"
python-dateutil = "2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"